--- a/src/components/header/HeaderComponent.css
+++ b/src/components/header/HeaderComponent.css
@@ -4,12 +4,12 @@
     top: 0px;
     left: 0px;
 
-    height: 75px;
+    height: 5em;
     width: 100vw;
 
 
-    background-color: blue;
-    border: 1px solid red;
+    background-color: lightseagreen;
+    border-bottom: solid 5px green;
 
     display: flex;
     justify-content: space-between;
