--- a/src/components/common/loginModal/LoginModal.css
+++ b/src/components/common/loginModal/LoginModal.css
@@ -56,6 +56,21 @@
     background-color: darkseagreen;
 }
 
+.login-modal-register-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0px 10px 0px;
+    border-bottom: 1px solid lightgray;
+    border-top: 1px solid lightgray;
+
+    position: relative;
+    left: 15%;
+    width: 70%;
+
+
+}
+
 .loading-spinner {
     animation: spin 1s linear infinite;
   }
