--- a/src/pages/ScreeningDetailsPage/ScreeningDetailsPage.css
+++ b/src/pages/ScreeningDetailsPage/ScreeningDetailsPage.css
@@ -1,3 +1,20 @@
+.screening-error-container {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: start;
+    align-items: center;
+
+    position: relative;
+    top: 5rem;
+    
+    width: 100%;
+}
+
+.screening-error-container > button {
+    margin-top: 3rem;
+}
+
 .screening-details-page-parent-container {
     width: 100%;
     display: flex;
