--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+  --card-bg-color: azure;
+  --light-border-color: lightgray;
+  --site-bg-color: lightblue;
+
+  --header-height: 5rem;
 }
 
 a {
