--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   top: 75px;
   left: 0px;
 
-  background-color: lightblue;
+  background-color: var(--site-bg-color);
   width: calc(100vw);
   height: calc(100vh - 75px);
 
