Upcoming - Preliminary work on cards

--- a/src/pages/UpcomingScreenings/UpcomingScreenings.css
+++ b/src/pages/UpcomingScreenings/UpcomingScreenings.css
@@ -10,4 +10,7 @@
 .upcoming-screenings-container {
     height: calc(100% - 2rem);
     width: 90%;
+
+    overflow: scroll;
+    scrollbar-width: none;
 }
