MovieCard - Minor adjument to styling and removed movie year

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -8,6 +8,11 @@
     background-color:var(--card-bg-color);
 }
 
+.movie-card-title-header {
+    margin: 0px;
+    margin-bottom: 0.5rem;
+}
+
 .movie-card-container > img {
     width: auto;
     height:300px;
