--- a/src/components/UpcomingSection/UpcomingCard/UpcomingCard.css
+++ b/src/components/UpcomingSection/UpcomingCard/UpcomingCard.css
@@ -1,11 +1,19 @@
-.upcoming-card-theater-name {
+.upcoming-card-locale-details {
     position: relative;
     top: -5px;
     border-top: 1px solid var(--light-border-color);
     background-color: var(--card-bg-color);
     border-radius: 0.2rem;
     height: fit-content;
+    padding-bottom: 0.4rem;
+}
 
-    padding: 0.5rem 0rem;
+.upcoming-card-start-time {
+    margin: 0px;
     font-weight: 600;
+}
+
+.upcoming-card-theater-name {
+    padding: 0.5rem 0rem;
+
 }
