--- a/src/pages/MoviePage/MoviePage.css
+++ b/src/pages/MoviePage/MoviePage.css
@@ -26,3 +26,10 @@
 .movie-page-image > img {
     width: 100%;
 }
+
+.movie-page-center-container {
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: 60% 40%;
+}
