--- a/src/pages/MoviePage/MoviePage.css
+++ b/src/pages/MoviePage/MoviePage.css
@@ -10,16 +10,20 @@
     padding: 2vw;
     width: calc(100vw - calc(2*2vw) - 10vw);
     height: calc(calc(100vh - calc(2*2vw)) - 6em - 2em);
-
-    border: solid red 5px;
+    
     border-radius: 1rem;
 }
 
 .movie-page-image {
     position: relative;
-    left: 0.3em;
+    left: 0.3rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     width: 25em;
+    max-width: 400px;
     height: fit-content;
 }
 
@@ -31,5 +35,22 @@
     width: 100%;
 
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: minmax(450px, 60%) minmax(calc(100% - 600px), 40%);
+}
+
+@media only screen and (max-width: calc(850px)) {
+    .movie-page-image {
+        width: 100%;
+        max-width: 100%;
+        left: 0rem;
+    }
+
+    .movie-page-image > img {
+        width: 80%;
+    }
+
+    .movie-page-center-container {
+        display: flex;
+        flex-direction: column;
+    }
 }
