--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,8 @@ button:focus-visible {
 }
 
 .scrollable {
-  overflow: scroll;
+  overflow-x: clip;
+  overflow-y: scroll;
   scrollbar-width: none;
 }
 
