--- a/src/pages/ScreeningDetailsPage/ScreeningDetailsPage.css
+++ b/src/pages/ScreeningDetailsPage/ScreeningDetailsPage.css
@@ -43,6 +43,17 @@
     grid-template-columns: 60% 40%;
 }
 
+.screening-details-content-theater-map {
+    display: flex;
+    place-content: center;
+
+    max-width: 90%;
+    height: 90%;
+    background-color: var(--card-bg-color);
+    padding: 0px 5% 0px 5%;
+}
+
+
 @media only screen and (max-width: calc(1200px)) {
     .screening-details-content-container {
         display: flex;
