--- a/src/components/PurchaseModal/SeatSelector/TicketCounter/TicketCounter.css
+++ b/src/components/PurchaseModal/SeatSelector/TicketCounter/TicketCounter.css
@@ -2,8 +2,14 @@
     display: flex;
     flex-direction: column;
 
-    position: absolute;
-    left: 0.5rem;
+    z-index: 7;
+
+    position: static;
+    width: fit-content;
+    left: 0.2rem;
+
+    overflow: scroll;
+    width: 11.2rem;
 }
 
 .ticket-counter-header {
