--- a/src/pages/MovieOverview/MovieOverviewPage.css
+++ b/src/pages/MovieOverview/MovieOverviewPage.css
@@ -4,20 +4,25 @@
 
     align-items: center;
     justify-content: center;
+
+    position: relative;
     width: 100%;
+    height: max-content;
 }
 
 .movie-card-list-container {
-    position: absolute;
-    top: calc(2vh);
-    width: 95%;
+    position: relative;
+    top: 0px;
+    width: 100%;
+    height: 100%;
 
     display: grid;
     grid-template-columns: 20rem 20rem 20rem 20rem;
     column-gap: 2rem;
     row-gap: 2rem;
-    padding-bottom: 3rem;
 
+    padding-top: calc(var(--header-height) + 2rem);
+    padding-bottom: 3rem;
     align-items: center;
     justify-content: center;
 }
