--- a/src/components/UpcomingSection/UpcomingSection.css
+++ b/src/components/UpcomingSection/UpcomingSection.css
@@ -4,6 +4,7 @@
     place-content: center;
 
     width: fit-content;
+    padding: 0px 0.5rem;
 }
 
 .upcoming-section-header {
@@ -14,7 +15,6 @@
     border-radius: 15px 15px 0px 0px;
     margin-bottom: 5px;
     margin-top: 0px;
-
 
     position: sticky;
     top: 0rem;
