--- a/src/components/common/AccountIcon/AccountIcon.css
+++ b/src/components/common/AccountIcon/AccountIcon.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 50px;
-    height: 50px;
+    width: 2.2rem;
+    height: 2.2rem;
     border-radius: 50%;
     border: 1px solid white;
     background-color: white;
