--- a/src/components/UpcomingScreeningList/UpcomingScreeningGroup/ScreeningItem/ScreeningItem.css
+++ b/src/components/UpcomingScreeningList/UpcomingScreeningGroup/ScreeningItem/ScreeningItem.css
@@ -1,8 +1,25 @@
-.upcoming-screening-item {
+.screening-item {
     background-color: var(--card-bg-color);
     border-radius: 5px;
     height: fit-content;
-    overflow: scroll;
+    width: 12rem;
+    min-width: 8rem;
 
-    margin-bottom: 0.5rem;
+    margin: 0px 0.5rem 1rem 0.5rem
+}
+
+.screening-item-start-time {
+    font-size: larger;
+    font-weight: 700;
+
+    margin: 0rem;
+}
+
+.screening-item-theater {
+    font-size: small;
+    font-variant: small-caps;
+    font-style: italic;
+
+    margin-top: 0rem;
+    margin-bottom: 0rem;
 }
