HeaderComponent - Import background and bottom border color from index.css

--- a/src/components/header/HeaderComponent.css
+++ b/src/components/header/HeaderComponent.css
@@ -8,8 +8,8 @@
     width: 100vw;
 
 
-    background-color: lightseagreen;
-    border-bottom: solid 5px green;
+    background-color: var(--header-bg-color);
+    border-bottom: solid 5px var(--header-border-color);
 
     display: flex;
     justify-content: space-between;
