Index.css - Added some color options

--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,13 @@
   --card-bg-color: azure;
   --light-border-color: lightgray;
   --site-bg-color: lightblue;
-  --button-color: blue;
+  --secondary-card-bg-color: rgba(186, 186, 255, 0.473);
+  --button-color: rgb(42, 214, 157);
 
   --header-height: 3rem;
+  --header-bg-color: goldenrod;
+  --header-border-color: Royalblue;
+
 }
 
 a {
@@ -95,7 +99,7 @@ button:focus-visible {
 }
 
 .standard-button {
-  background-color:rgb(42, 214, 157);
+  background-color:var(--button-color);
 
   margin-left: 5%;
   margin-right: 5%;
