--- a/src/pages/ScreeningPage/ScreeningPage.css
+++ b/src/pages/ScreeningPage/ScreeningPage.css
@@ -22,7 +22,8 @@
 
     align-items: center;
 
-    padding-top: 5rem;
+    padding-top: 2rem;
+    
 }
 .screening-page-container {
     width: 96%;
@@ -31,8 +32,17 @@
 }
 
 .screening-content-container {
+    width: 80%;
+    position: relative;
+    left: 10%;
+
+    background-color: var(--card-bg-color);
+    border-radius: 15px;
+
+    padding: 1rem;
+
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 55% 45%;
 }
 
 .screening-content-theater-map {
