Index - Minor background color change

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --primary-text-color: whitesmoke;
   --card-bg-color: azure;
   --light-border-color: lightgray;
-  --site-bg-color: lightblue;
+  --site-bg-color: rgb(221, 235, 240);
   --secondary-card-bg-color: rgba(186, 186, 255, 0.473);
   --button-color: rgb(42, 214, 157);
 
