--- a/src/components/PurchaseModal/PurchaseModal.css
+++ b/src/components/PurchaseModal/PurchaseModal.css
@@ -1,4 +1,5 @@
 .purchase-modal-container {
+    filter: none;
     background-color: var(--card-bg-color);
     z-index: 5;
     border-radius: 10px;
@@ -7,7 +8,7 @@
     flex-direction: column;
     place-content: center;
 
-    --purchase-modal-width: 80vw;
+    --purchase-modal-width: 40rem;
     width: var(--purchase-modal-width);
     height: fit-content;
 
@@ -15,6 +16,7 @@
     left: calc(50vw - calc(var(--purchase-modal-width) / 2));
     top: calc(20vh - var(--header-height));
 
+    padding: 1rem 1rem;
 }
 
 .purchase-modal-cancel-purchase-container {
