--- a/src/components/PurchaseModal/PurchaseModal.css
+++ b/src/components/PurchaseModal/PurchaseModal.css
@@ -1,15 +1,15 @@
 .purchase-modal-container {
-    filter: none;
     background-color: var(--card-bg-color);
     z-index: 5;
     border-radius: 10px;
 
     display: flex;
     flex-direction: column;
-    place-content: center;
+    justify-content: center;
 
     --purchase-modal-width: 40rem;
     width: var(--purchase-modal-width);
+    min-width: 15rem;
     height: fit-content;
 
     position: fixed;
@@ -19,12 +19,12 @@
     padding: 1rem 1rem;
 }
 
-.purchase-modal-cancel-purchase-container {
-    position: absolute;
-    top: 0.2rem;
-    right: 0.2rem;
-}
+@media only screen and (max-width: calc(750px)) {
+    .purchase-modal-container {
+        width: calc(100vw - 2rem);
+        left: 0px;
 
-.purchase-modal-cancel-purchase {
-    background: none;
+        height: 80vh;
+        top: 10vh;
+    }
 }
