--- a/src/components/PurchaseModal/SeatView/SeatSelector/SeatSelector.css
+++ b/src/components/PurchaseModal/SeatView/SeatSelector/SeatSelector.css
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.seat-selector-theater-seat-selector-parent-container {
+.seat-selector-theater-container {
     position: relative;
 
     width: 100%; 
@@ -19,19 +19,14 @@
 
 
     display: grid;
-    grid-template-columns: 14rem calc(100%);
+    grid-template-columns: 12rem calc(100% - 12rem);
     column-gap: 0px;
     row-gap: 0px;
-
-    justify-content: left;
-
-    overflow: hidden;
-
 }
 
-.seat-selector-theater-selector-container {
-    width: inherit;
-    height: 100%;
+.seat-selector-container {
+    width: calc(100% - 2rem);
+    height: 30rem;
 
     transform: scale(1);
     transform-origin: 19% 8%;
@@ -39,8 +34,7 @@
     overflow: scroll;
     
     display: flex;
-    justify-content: left;
-
-    position: relative;
-    left: 0.2rem;
+    justify-content: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
