--- a/src/components/PurchaseModal/PurchaseModal.css
+++ b/src/components/PurchaseModal/PurchaseModal.css
@@ -19,6 +19,47 @@
     padding: 1rem 1rem;
 }
 
+.purchase-modal-no-user-container {
+    background-color: var(--card-bg-color);
+    z-index: 5;
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    --purchase-modal-width: 40rem;
+    width: var(--purchase-modal-width);
+    min-width: 15rem;
+    height: fit-content;
+
+    position: fixed;
+    left: calc(50vw - calc(var(--purchase-modal-width) / 2));
+    top: calc(40vh - var(--header-height));
+
+    padding: 1rem 1rem;
+}
+
+.purchase-modal-no-user-button-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.purchase-modal-login-button {
+    margin-top: 2rem;
+}
+
+.purchase-modal-purchase-complete-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.purchase-modal-return-button {
+    margin-top: 2rem;
+}
+
 @media only screen and (max-width: calc(750px)) {
     .purchase-modal-container {
         width: calc(100vw - 2rem);
