TicketCounter - Scroll when large number of tickets

--- a/src/components/PurchaseModal/SeatView/SeatSelector/TicketCounter/TicketCounter.css
+++ b/src/components/PurchaseModal/SeatView/SeatSelector/TicketCounter/TicketCounter.css
@@ -8,7 +8,8 @@
     width: fit-content;
     left: 0.2rem;
 
-    overflow: scroll;
+    overflow-y: scroll;
+    height: 30rem;
     width: 11.2rem;
 }
 
