--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
   
   --primary-text-color: whitesmoke;
-  --card-bg-color: azure;
+  --card-bg-color: whitesmoke;
   --light-border-color: lightgray;
   --site-bg-color: rgb(221, 235, 240);
   --secondary-card-bg-color: rgba(186, 186, 255, 0.473);
