ScreeningPage - Separated out header and image from ScreeningMovieDetails

--- a/src/pages/ScreeningPage/ScreeningPage.css
+++ b/src/pages/ScreeningPage/ScreeningPage.css
@@ -44,6 +44,17 @@
     grid-template-columns: 30rem calc(100% - 30rem);
 }
 
+.screening-movie-details-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid var(--light-border-color);
+
+    position: relative;
+    margin-top: 0px;
+    height: 4rem;
+}
+
 .screening-content-theater-map {
     display: flex;
     place-content: center;
