--- a/src/components/ScreeningMovieDetails/ScreeningMovieDetails.css
+++ b/src/components/ScreeningMovieDetails/ScreeningMovieDetails.css
@@ -1,16 +1,20 @@
 .screening-movie-details {
     display: flex;
     flex-direction: column;
-    justify-content: left;
-
-    padding: 0px 2rem;
+    justify-content: center;
 
     position: relative;
-    height: 70%;
+    height: fit-content;
+    left: -2%;
+    width: 104%;
+    background-color: var(--secondary-card-bg-color);
 }
 
 .screening-movie-information {
-    width: 100%;
+    display: flex;
+    justify-content: left;
+    width: 70%;
+    padding: 0px 15%;
 }
 
 .screening-movie-details-poster {
@@ -27,7 +31,6 @@
     flex-direction: column;
 
     justify-content: start;
-    align-items: left;
 
     position: relative;
     width: 100%;
@@ -35,7 +38,7 @@
     padding: 0rem 1rem 1rem 1rem;
 }
 
-.screening-movie-deatils-description-header {
+.screening-movie-details-description-header {
     text-align: left;
     display: flex;
     justify-content: left;
@@ -52,21 +55,18 @@
     width: calc(100% - 1rem);
 }
 
-.screening-movie-details-title {
-    margin-top: 0px;
-    height: 4rem;
-}
 
 .screening-movie-details-description {
     display: flex;
     justify-content: left;
 
-    height: 15rem;
+    height: fit-content;
+    max-height: 15rem;
     max-width: 20rem;
     overflow-y: scroll;
 
-    background-color: var(--secondary-card-bg-color);
     border-radius: 10px;
+    border: 1px solid black;
 
     padding: 0.5rem;
     margin-top: 0px;
