--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,5 +1,7 @@
 .movie-card-container {
-    width: 300px;
+    min-width: 250px;
+    max-width: 300px;
+
 
     padding: 5px;
     border-radius: 10px;
