--- a/src/components/header/HeaderComponent.css
+++ b/src/components/header/HeaderComponent.css
@@ -6,7 +6,7 @@
 
     height: var(--header-height);
     width: 100vw;
-
+    min-width: 250px;
 
     background-color: var(--header-bg-color);
     border-bottom: solid 5px var(--header-border-color);
