Styling - Changed colors used

--- a/src/components/header/HeaderComponent.css
+++ b/src/components/header/HeaderComponent.css
@@ -9,7 +9,7 @@
     min-width: 250px;
 
     background-color: var(--header-bg-color);
-    border-bottom: solid 5px var(--header-border-color);
+    border-bottom: solid 5px var(--accent-color);
 
     display: flex;
     justify-content: space-between;
