--- a/src/components/header/UserOverview/UserOverview.css
+++ b/src/components/header/UserOverview/UserOverview.css
@@ -8,6 +8,7 @@
 }
 
 .user-overview-outer-container > button {
-    height: fit-content;
+    height: 2.2rem;
     margin-right: 20px;
+    padding: 0.2rem 0.4rem;
 }
