MovieCard - Added StarRating to the MovieCard

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -21,3 +21,10 @@
     border-radius: 5px;
     border: 0.1px solid var(--light-border-color);
 }
+
+.movie-card-additional-information {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 0px 1.5rem;
+}
