index.css - Removed legacy color definitions

--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /*
-  --primary-text-color: whitesmoke;
-  --card-bg-color: lightsteelblue;
-  --light-border-color: lightgray;
-  --site-bg-color: whitesmoke(221, 235, 240);
-  --secondary-card-bg-color: honeydew;
-  --button-color: rgb(42, 214, 157);
-
-  --header-height: 3rem;
-  --header-bg-color: steelblue;
-  --accent-color: magenta;
-  */
   --site-bg-color: whitesmoke;
   --light-border-color: #B5BAD0;
   --card-bg-color: #81D2C7;
@@ -117,6 +105,8 @@ button:focus-visible {
   border: none;
 
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .standard-button:hover {
