UserOverview - Adjusted right position to not overlap with scrollbar

--- a/src/components/header/UserOverview/UserOverview.css
+++ b/src/components/header/UserOverview/UserOverview.css
@@ -4,7 +4,7 @@
     align-items: center;
 
     position: relative;
-    right: 5px;
+    right: 2rem;
 }
 
 .user-overview-outer-container > button {
