--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: normal;
+  color: rgba(0, 0, 0, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -22,6 +22,12 @@
   --header-height: 3rem;
   --header-bg-color: #7389AE;
   --accent-color: #7389AE;
+}
+
+@media (prefers-color-scheme: dark) {
+  .element {
+    color: black;
+  }
 }
 
 a {
