--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   background-color: var(--site-bg-color);
   width: calc(100vw);
   height: fit-content;
-  min-height: calc(100vh - var(--header-height));
+  min-height: calc(100vh - calc(2 * var(--header-height)));
 
   position: relative;
   top: var(--header-height);
