ScreeningPage - Minor style adjustment

--- a/src/pages/ScreeningPage/ScreeningPage.css
+++ b/src/pages/ScreeningPage/ScreeningPage.css
@@ -26,9 +26,8 @@
     
 }
 .screening-page-container {
-    width: 96%;
-    height: 90%;
-
+    width: 94%;
+    height: calc(90% - var(--header-height));
 }
 
 .screening-content-container {
