--- a/src/components/PurchaseModal/SeatView/SeatSelector/TicketCounter/TicketCounterItem/TicketCounterItem.css
+++ b/src/components/PurchaseModal/SeatView/SeatSelector/TicketCounter/TicketCounterItem/TicketCounterItem.css
@@ -4,7 +4,7 @@
 
     padding: 0.3rem;
     background-color: var(--card-bg-color);
-    width: 10rem;
+    width: 90%;
 
     display:flex;
     justify-content: space-between;
@@ -14,4 +14,19 @@
 .ticket-counter-item-button {
     position: relative;
     right: -0.2rem;
+}
+
+@media only screen and (max-width: 750px) {
+    .ticket-counter-item-container {
+        height: 1.5rem;
+    }
+    
+    .ticket-counter-item-button {
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        
+        padding: 0.5rem;
+        height: 1.8rem;
+    }
 }
