--- a/src/components/PurchaseModal/SeatView/SeatView.css
+++ b/src/components/PurchaseModal/SeatView/SeatView.css
@@ -3,11 +3,7 @@
     justify-content: center;
 }
 
-.purchase-modal-confirm-button-verify {
-    padding: 0.3rem;
-
-    display: flex;
-    flex-direction: row;
-
-    place-content: center;
+.purchase-modal-confirm-container {
+    border-top: 1px solid var(--light-border-color);
+    padding-top: 0.5rem;
 }
