--- a/src/components/PurchaseModal/PurchaseModal.css
+++ b/src/components/PurchaseModal/PurchaseModal.css
@@ -67,3 +67,10 @@
         top: 10vh;
     }
 }
+
+@media only screen and (max-width: calc(550px)) {
+    .purchase-modal-container {
+        height: 100vh;
+        top: 0px;
+    }
+}
