--- a/src/components/ProfileView/ProfileView.css
+++ b/src/components/ProfileView/ProfileView.css
@@ -1,12 +1,14 @@
 .profile-view-parent-container {
     width: 80%;
     min-width: 22rem;
+    min-height: calc(100vh - calc(2 * var(--header-height)) - 2.1rem);
     height: fit-content;
 
     display: flex;
     flex-direction: column;
 
-    place-content: center;
+    justify-content: start;
+    align-items: center;
     padding-top: 2rem;
 }
 
@@ -21,14 +23,13 @@
 
 .profile-view-header {
     position: sticky;
-}
-
-.profile-view-header {
     text-align: left;
+    width: calc(100% - 0.5rem);
     padding-left: 0.5rem;
 }
 
 .profile-personal-information-container {
+    width: 100%;
     background-color: var(--card-bg-color);
     padding-bottom: 1.5rem;
 }
