--- a/src/components/ProfileView/NoUserWarning/NoUserWarning.css
+++ b/src/components/ProfileView/NoUserWarning/NoUserWarning.css
@@ -1,3 +1,7 @@
+.profile-view-no-profile-container {
+    min-height: calc(100vh - calc(2 * var(--header-height)) - 0.1rem);
+}
+
 .profile-view-buttons-container {
     display: flex;
     flex-direction: column;
