--- a/src/components/RegisterAccount/RegisterAccount.css
+++ b/src/components/RegisterAccount/RegisterAccount.css
@@ -16,17 +16,24 @@
     width: 100%;
 }
 
+
 .register-account-input-container {
     display: flex;
     flex-direction: column;
-
+    
     width: 100%;
     margin-bottom: 2rem;
+    }
+    
+.register-account-button-container {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
 }
 
-.register-account-button {
-    margin: 0px 1rem;
-}
 
 @media only screen and (max-width: calc(32rem)) {
     .register-account-parent-container {
