--- a/src/components/header/SmallHeader/LinkMenu/LinkMenu.css
+++ b/src/components/header/SmallHeader/LinkMenu/LinkMenu.css
@@ -21,8 +21,8 @@
     width: 1.75rem;
 }
 
-
-.header-dropdown-button-container.active, .header-dropdown-button-container:hover  {
+.header-dropdown-button-container.active,
+.header-dropdown-button-container:hover {
     filter: brightness(0.8);
 }
 
@@ -35,16 +35,19 @@
     left: -0.2rem;
     z-index: 6;
 
+    background-color: var(--secondary-card-bg-color);
+    border-radius: 1rem;
+    padding: 6px;
 }
 
 .header-dropdown-item {
     margin-bottom: 0.2rem;
     background-color: var(--card-bg-color);
-    border-radius: 4px;
+    border-radius: 0.5rem;
     padding: 0.2rem 0.5rem;
     transition: filter 0.3s ease;
 }
 
 .header-dropdown-item:hover {
-    filter: brightness(0.8)
+    filter: brightness(0.8);
 }
