--- a/src/index.css
+++ b/src/index.css
@@ -1,136 +1,136 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: normal;
-  color: rgba(0, 0, 0, 0.87);
-  background-color: #242424;
+    color-scheme: normal;
+    color: rgba(0, 0, 0, 0.87);
+    background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-  --site-bg-color: whitesmoke;
-  --light-border-color: #B5BAD0;
-  --card-bg-color: #81D2C7;
-  --secondary-card-bg-color: #C8D5B9;
-  --button-color: #81D2C7;
+    --site-bg-color: whitesmoke;
+    --light-border-color: #b5bad0;
+    --card-bg-color: #81d2c7;
+    --secondary-card-bg-color: #c8d5b9;
+    --button-color: #81d2c7;
 
-  --secondary-text-color: #F4EDEA;
-  --header-height: 3rem;
-  --header-bg-color: #7389AE;
-  --accent-color: #7389AE;
+    --secondary-text-color: #f4edea;
+    --header-height: 3rem;
+    --header-bg-color: #7389ae;
+    --accent-color: #7389ae;
 
-  --purchase-modal-width: 35rem;
+    --purchase-modal-width: 35rem;
 }
 
 @media (prefers-color-scheme: dark) {
-  .element {
-    color: black;
-  }
+    .element {
+        color: black;
+    }
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 15rem;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 15rem;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+    border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+    a:hover {
+        color: #747bff;
+    }
+    button {
+        background-color: #f9f9f9;
+    }
 }
 
 .highlight {
-  border: 1px solid red;
+    border: 1px solid red;
 }
 
 .top-rounded-corners {
-  border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .rounded-corners {
-  border-radius: 10px;
+    border-radius: 10px;
 }
 
 .clickable {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .scrollable {
-  overflow-x: scroll;
-  overflow-y: scroll;
-  scrollbar-width: none;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 .standard-button {
-  background-color:var(--button-color);
+    background-color: var(--button-color);
 
-  margin-left: 5%;
-  margin-right: 5%;
-  width: max-content;
-  border: none;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: max-content;
+    border: none;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .standard-button:hover {
-  background-color: darkseagreen;
+    background-color: darkseagreen;
 }
 
 .background-blurred {
-  height: calc(100% - var(--header-height));
-  margin: 0px;
-  overflow: hidden;
-  scroll-behavior:unset;
-  scrollbar-width: none;
+    height: calc(100% - var(--header-height));
+    margin: 0px;
+    overflow: hidden;
+    scroll-behavior: unset;
+    scrollbar-width: none;
 
-  filter: blur(2px) brightness(0.8);
+    filter: blur(2px) brightness(0.8);
 }
